# aiogram-ru-pin

./: README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml  preview.yml  test.yml
