[tool.poetry]
name = "gh-telegraph"
version = "0.1.0"
description = ""
authors = ["Gabben <github@sosus.org>"]

[tool.poetry.dependencies]
python = "^3.10"
mistune = "=2.0.2"
aiograph = "=0.2"
attrs = "=19.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
